Debugging Gallery video thumbnail issue on iOS

--- a/components/gallery/gallery.module.scss
+++ b/components/gallery/gallery.module.scss
@@ -57,9 +57,6 @@
   &_media {
     object-fit: cover;
   }
-  &_text {
-    font-weight: 700;
-  }
   &_video,
   &_videoContainer,
   &_videoPlayTriangle {
